--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -276,6 +276,18 @@ p {
   color: #676767;
 }
 
+.tm-social-icon {
+  margin: 0 10px;
+  color: #ffffff;
+  font-size: 2rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+}
+
+.tm-social-icon:hover {
+  color: ;
+  transform: scale(1.2);
+}
+
 @media (max-width: 1054px) {
   .tm-contact-item-icon {
     margin-bottom: 15px;
